# tprm-clause-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
clauses/compliance/: CO-001-right-to-audit.yaml
clauses/data_protection/: DP-001-limited-purpose-processing.yaml  DP-002-subprocessor-management.yaml
clauses/incident_response/: IR-001-breach-notification.yaml  IR-002-investigation-coordination.yaml
clauses/liability/: LI-001-general-liability-cap.yaml  LI-002-security-incident-super-cap.yaml
clauses/operational/: OP-001-data-return-and-destruction.yaml
clauses/security_controls/: SC-001-information-security-program.yaml  SC-002-encryption-standards.yaml
scanner/: README.md  clause-engine-baseline.json  clause_scanner.py
scanner/examples/: sample_contract.txt  sample_report.md
src/clause_engine/: __init__.py  cli.py  loader.py  models.py
tests/: test_clause_engine.py
